--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<maven.compiler.target>1.5</maven.compiler.target>
 		<encoding>UTF-8</encoding>
 		<scala.version>2.10.2</scala.version>
-		<datastax.cassandra.version>1.0.6-dse</datastax.cassandra.version>
+		<datastax.cassandra.version>2.1.5</datastax.cassandra.version>
 		<akka.version>2.2.3</akka.version>
 		<spray.version>1.2.0</spray.version>
 	</properties>
