--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,27 @@
 					</includes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>me.play.streaming.tweet.App</mainClass>
+						</transformer>
+					</transformers>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
