--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,10 @@
 				<configuration>
 					<transformers>
 						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>reference.conf</resource>
+						</transformer>
+						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 							<mainClass>me.play.streaming.tweet.App</mainClass>
 						</transformer>
